.kubernetes/templates/server/4.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: '%NAMESPACE%'
  name: %NAMESPACE%-server
  labels:
    app: %NAMESPACE%-server
spec:
  selector:
    app: %NAMESPACE%-server
  ports:
    - name: '%RUCKEN_PORT%'
      protocol: TCP
      port: %RUCKEN_PORT%
      targetPort: %RUCKEN_PORT%
  type: ClusterIP
